--- a/.github/workflows/priorityLabel.yml
+++ b/.github/workflows/priorityLabel.yml
@@ -2,6 +2,9 @@ name: Apply Priority Label
 
 on:
   workflow_call:
+    secrets:
+      GITHUB_TOKEN:
+        required: true
   
 jobs:
   apply-label:
