--- a/.github/workflows/updateIssueTemplates.yml
+++ b/.github/workflows/updateIssueTemplates.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        template: []
+        template: ["Bug"]
 
     steps:
       - name: Checkout repository
