--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
     steps:
       - name: Checkout private repo
-        if: ${{ contains(keys(matrix.item), 'key') }}
+        if: ${{ matrix.item.key }}
         uses: actions/checkout@v4
         with:
           repository: ${{ matrix.item.repo }}
@@ -42,7 +42,7 @@ jobs:
           path: ${{ matrix.item.path || matrix.item.repo }}
 
       - name: Checkout public repo
-        if: ${{ !contains(keys(matrix.item), 'key') }}
+        if: ${{ !matrix.item.key }}
         uses: actions/checkout@v4
         with:
           repository: ${{ matrix.item.repo }}
@@ -53,7 +53,7 @@ jobs:
     needs: checkout-repos
     strategy:
       matrix:
-        os: ${{ fromJSON(format('["{0}"]', inputs.platforms) | replace(',', '","')) }}
+        os: ${{ fromJSON('["' + inputs.platforms.replace(',', '","') + '"]') }}
     runs-on: ${{ matrix.os }}
 
     steps:
